<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_surface_1"
    tools:context=".fragments.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/color_primary"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings"
        app:titleMarginStart="24dp"
        app:titleTextColor="@color/on_color" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/choose_language_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/language"
        android:textColorHint="@color/color_secondary"
        app:boxBackgroundColor="@color/surface_surface_2"
        app:boxStrokeColor="@color/color_secondary"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/choose_language_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="English" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/choose_city_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/city"
        android:textColorHint="@color/color_secondary"
        app:boxBackgroundColor="@color/surface_surface_2"
        app:boxStrokeColor="@color/color_secondary"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintTop_toBottomOf="@id/choose_language_input_layout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/choose_city_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="Zagreb" />

    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/choose_units_card"
        layout="@layout/choose_units_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/choose_city_input_layout" />

    <include
        android:id="@+id/about_card"
        layout="@layout/about_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/choose_units_card" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_my_cities_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/clear_button_background"
        android:text="@string/clear_my_cities_list"
        android:textColor="@color/status_error"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/about_card" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_recent_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/clear_button_background"
        android:text="@string/clear_recent_search_list"
        android:textColor="@color/status_error"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/clear_my_cities_button" />


</androidx.constraintlayout.widget.ConstraintLayout>